k8s/backend/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conduit
  labels:
    app.kubernetes.io/part-of: platform-foundry
