k8s/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: conduit
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: conduit
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
